--- a/deploy/v1.0.0/controller.yaml
+++ b/deploy/v1.0.0/controller.yaml
@@ -36,7 +36,7 @@ spec:
                   key: folderId
             - name: SA_KEY
               value: /etc/yc-disk-csi-driver/sa-key.json
-          image: cr.yandex/crpepe7vk2hr2549ncud/yc-csi-controller:2fc83cb
+          image: cr.yandex/crpsjg1coh47p81vh2lc/yc-csi-controller:v1.0.0
           resources: {}
           volumeMounts:
             - name: sa-key
